olvido de contraseña funcionando al 100

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="c_digo_qr">Código QR</string>
     <string name="multimedia">Multimedia</string>
     <string name="calificacion">Calificación</string>
+    <string name="registrar">Registrar</string>
 
 </resources>
