boton de cerrar sesion agregado y funcionando

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="multimedia">Multimedia</string>
     <string name="calificacion">Calificación</string>
     <string name="registrar">Registrar</string>
+    <string name="cerrar_sesi_n">Cerrar Sesión</string>
 
 </resources>
